Add m3gContextMode property